[package]
name = "lektor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", default-features = false, features = ["csr"] }
leptos_router = { version = "0.8", default-features = false }
reactive_stores = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
wasm-bindgen = "0.2"
comrak = { version = "0.52", default-features = false }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlInputElement",
    "Storage",
    "Node",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
